2005-02-17 22:36 Mike Park  <mike.park@nasa.gov>

	* src/FAKEGeomExtras.c (ErrMgr_Append) Added for fake
	CADGeom_ReversedSurfaceNormal call to allow adaptation without the
	SDK.
	
2005-02-16 15:15 Bill Jones <w.t.jones@larc.nasa.gov>

	* src/gridcad.c (gridFaceAreaUV) check orientation of surface to
	Face and negate area as necessary.

2005-02-14 08:23 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridwritetecplotsurfacezone_) dump flagged
	cell info (local and global ids) to stdout.

2005-02-13 11:35 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridOptimizeUVForVolume) added face UV area check
	to prevent face area from dropping below 1.0e-12 while trying yo
	improve cell volume. It will continue to smooth below this area if
	area is increasing.
	* src/gridcad.c (gridSmartVolumeLaplacian) fixed an old copy and
	paste bug. Now it uses the correct gridNodeVolume cost instead of
	the copyied gridNodeAR.
	* src/gridcad.c (gridSmoothNodeVolumeSimplex) decreased its
	convergence tolerence to 1.0e-10 from 1.0e-8.
	
2005-02-12 11:56 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridParallelRelaxNegativeFaceAreaUV) added checks
	to make sure that only allow boundary nodes can be selected to fix
	negative face areas with gridSmoothNodeFaceAreaUV. Increased the
	face area seletion from smaller than 0.0 to smaller then 1.0e-14.
	* src/gridcad.c (gridSmoothNodeFaceAreaUV) return immediately with
	NULL if it was not called with a boundary node.
	* src/gridcad.c (gridSmoothNodeFaceAreaUVSimplex) return
	immediately with NULL if the it was called for a node that it
	cannot handle. Return NULL if it cannot find a valid face
	associated with this node.

2005-02-12 10:19 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridNodeProjectionDisplacement) cleaned up how
	the displacements for the evaluated/projected surface are
	calculated. Made sure that all the CAD parameters are also
	updated.

2005-02-08 00:18 Mike Park  <mike.park@nasa.gov>
