@@ -196,6 +196,7 @@ Grid *gridRenumber(Grid *g, int *o2n);
 void gridFree(Grid *g);
 
 Grid *gridWriteTecplotSurfaceGeom(Grid *g, char *filename );
+Grid *gridWriteTecplotComment(Grid *g, char *comment );
 Grid *gridWriteTecplotCellGeom(Grid *g, int *nodes, char *filename );
 Grid *gridCloseTecplotGeomFile(Grid *g);
 /* Warning, call gridSortNodeGridEx before calculating scalar 
